crates/tesshir/tests/fixtures/check/interface_inheritance_cycle.golden
Error: check/interface_inheritance_cycle.tess:5:14: interface inheritance cycle involving `A`
Error: check/interface_inheritance_cycle.tess:1:14: interface inheritance cycle involving `B`
