crates/tesshir/tests/fixtures/check/interface_inheritance_cycle.tess
interface A: B {
    fn a(self: &Self) -> i32;
}

interface B: A {
    fn b(self: &Self) -> i32;
}
